# feusi-microblogger-py

./: .gitignore  CONVENTIONS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml  ci.yml
app/: main.py  streamlit_app.py
app/model/: post.py  test_post.py  user.py
app/persistence/: __init__.py  in_memory_post_storage.py  post_storage.py  storage.py
app/ui/components/: add_new_post.py  configure_user_name.py  posts_history.py
test/: test_create_user_and_simple_post.py
