[project]
name = "microblogger"
version = "0.1.0"
description = ""
authors = [
    {name = "Leandro Lerena",email = "leandro@lerena.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)"
]

[tool.poetry]
package-mode=false

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
