[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Leandro Lerena",email = "leandro@lerena.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "streamlit-autorefresh (>=1.0.1,<2.0.0)"
]


[tool.poetry.scripts]
app = 'app.main:main'

[tool.poetry]
package-mode=false

[tool.pylint]
max-line-length = 120
disable = [
    "missing-docstring",
    "unused-argument",
    "line-too-long",
    "fixme",
    "protected-access",
    "too-few-public-methods",
    "redefined-outer-name",
    "broad-exception-caught",
    "too-many-instance-attributes",
    "arguments-renamed"
]

[tool.pytest.ini_options]
testpaths = ["app", "test"]
python_files = ["test_*.py"]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pytest = "^8.4.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
